--- a/projekat.ipynb
+++ b/projekat.ipynb
@@ -132,10 +132,13 @@
     "        if br % 100 == 0 or br > 207:\n",
     "            print(\"--- neg\", br)\n",
     "        br = br + 1\n",
+    "    print(\"-- kraj\")\n",
+    "    pos_features = np.array(pos_features)\n",
+    "    neg_features = np.array(neg_features)\n",
+    "    np.vstack((pos_features, neg_features))\n",
+    "    np.array(labels)\n",
     "    print(\"-- end\")\n",
-    "    pos_features = []\n",
-    "    neg_features = []\n",
-    "    return None\n",
+    "    return\n",
     "    \n",
     "\n",
     "def classify_window(window, hog):\n",
@@ -181,7 +184,9 @@
       "--- neg 100\n",
       "--- neg 200\n",
       "--- neg 208\n",
-      "--- neg 209\n"
+      "--- neg 209\n",
+      "--- neg 210\n",
+      "-- kraj\n"
      ]
     }
    ],
@@ -200,9 +205,9 @@
     "print(\"Slike za test:\", len(test_set))\n",
     "\n",
     "print(\"- hog poceo\")\n",
-    "nbins = 9 # broj binova\n",
-    "cell_size = (8, 8) # broj piksela po celiji\n",
-    "block_size = (3, 3) # broj celija po bloku\n",
+    "nbins = 5 # broj binova\n",
+    "cell_size = (10, 10) # broj piksela po celiji\n",
+    "block_size = (5, 5) # broj celija po bloku\n",
     "\n",
     "img = with_books[0]\n",
     "\n",
