Svi moguci pokusaji do sad

--- a/3_hog.ipynb
+++ b/3_hog.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "45c4204c",
+   "execution_count": 1,
+   "id": "8f806465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,22 +17,13 @@
     "# iscrtavanje slika u notebook-u\n",
     "%matplotlib inline\n",
     "# prikaz vecih slika\n",
-    "matplotlib.rcParams['figure.figsize'] = 16,12\n",
-    "\n",
-    "# keras                                           -OVO JE DODATO\n",
-    "from tensorflow import keras\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers.core import Dense, Activation\n",
-    "\n",
-    "from tensorflow.keras.optimizers import SGD\n",
-    "\n",
-    "# detekcija slika\n"
+    "matplotlib.rcParams['figure.figsize'] = 16,12"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "105877cb",
+   "id": "2145eb0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,63 +35,13 @@
     "        if img is not None:\n",
     "            img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "            images.append(img)\n",
-    "    return images \n",
-    "    "
+    "    return images "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b1e3606d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "#procesiranje slika\n",
-    "def rgb2gray(img_rgb):\n",
-    "    img_gray = np.ndarray((img_rgb.shape[0], img_rgb.shape[1]))  # zauzimanje memorije za sliku (nema trece dimenzije)\n",
-    "    img_gray = 0.21*img_rgb[:, :, 0] + 0.72*img_rgb[:, :, 1] + 0.07*img_rgb[:, :, 2]\n",
-    "    img_gray = img_gray.astype('uint8')  # u prethodnom koraku smo mnozili sa float, pa sada moramo da vratimo u [0,255] opseg\n",
-    "    return img_gray\n",
-    "\n",
-    "\n",
-    "def treshold(image):\n",
-    "    treshold_image = cv2.adaptiveThreshold(image, 255, cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY, 15, 5)\n",
-    "    return treshold_image\n",
-    "\n",
-    "def opening(image):\n",
-    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (5, 5))\n",
-    "    eroded_image = cv2.erode(image, kernel, iterations=1)\n",
-    "    dilated_image = cv2.dilate(eroded_image, kernel, iterations=1)\n",
-    "    return dilated_image\n",
-    "\n",
-    "def closing(image):\n",
-    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (3, 3))\n",
-    "    dilated_image = cv2.dilate(image, kernel, iterations=3)\n",
-    "    eroded_image = cv2.erode(dilated_image, kernel, iterations=1)\n",
-    "    return eroded_image\n",
-    "\n",
-    "\n",
-    "def preparing_images(images):\n",
-    "    preparing_images = []\n",
-    "    for image in images:\n",
-    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB) #prvo prebacivanje u RGB iz BGR\n",
-    "        image = rgb2gray(image) #radjenje grayscale\n",
-    "        image = opening(image)\n",
-    "        #image = closing(image)\n",
-    "        #image = opening(image)\n",
-    "        #image = treshold(image)\n",
-    "        #image = closing(image)\n",
-    "        preparing_images.append(image)\n",
-    "        \n",
-    "    return preparing_images\n",
-    "    \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ddf1059e",
+   "execution_count": 4,
+   "id": "efc40451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,12 +73,12 @@
     "        if br % 100 == 0 or br > 207:\n",
     "            print(\"--- neg\", br)\n",
     "        br = br + 1\n",
-    "    print(\"-- kraj\")\n",
+    "    print(\"-- features\")\n",
     "    pos_features = np.array(pos_features)\n",
     "    neg_features = np.array(neg_features)\n",
     "    np.vstack((pos_features, neg_features))\n",
     "    np.array(labels)\n",
-    "    print(\"-- end\")\n",
+    "    print(\"-- kraj\")\n",
     "    return\n",
     "    \n",
     "\n",
@@ -163,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d107027b",
+   "id": "1c595547",
    "metadata": {},
    "outputs": [
     {
@@ -186,19 +127,12 @@
       "--- neg 208\n",
       "--- neg 209\n",
       "--- neg 210\n",
-      "-- kraj\n"
+      "-- features\n"
      ]
     }
    ],
    "source": [
-    "#glavna funkcija (main)\n",
-    "#images = load_images_from_folder(\"skup_podataka\")\n",
-    "#img = cv2.imread('skup_podataka/srednjiKval.jpg')\n",
-    "#img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "#images = [img]\n",
-    "#images = preparing_images(images)\n",
-    "#plt.imshow(images[0], 'gray')\n",
-    "\n",
+    "# glavna funkcija\n",
     "with_books, without_books, test_set = load_sets()\n",
     "print(\"Slike sa knjigama:\", len(with_books))\n",
     "print(\"Slike bez knjiga:\", len(without_books))\n",
@@ -232,23 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7be4dc27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b22fbbe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed99cf02",
+   "id": "735ff336",
    "metadata": {},
    "outputs": [],
    "source": []
