Dodavanje procene za ceo skup podataka

--- a/4_non_maximum_suppression.ipynb
+++ b/4_non_maximum_suppression.ipynb
@@ -14,7 +14,9 @@
     "from sklearn.externals import joblib\n",
     "from nms import nms\n",
     "import argparse\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os \n",
+    "import csv"
    ]
   },
   {
@@ -70,6 +72,288 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "dfc874c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        img_path = os.path.join(folder, filename)\n",
+    "        img = cv2.imread(img_path)\n",
+    "        if img is not None:\n",
+    "            img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "            images.append(img)\n",
+    "    return images "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d0cb481c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "br slika: 150\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\soft_vezbe\\sc-2021-siit\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator LinearSVC from version 0.20.2 when using version 1.0.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/modules/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slika 1\n",
+      "slika 2\n",
+      "slika 3\n",
+      "slika 4\n",
+      "slika 5\n",
+      "slika 6\n",
+      "slika 7\n",
+      "slika 8\n",
+      "slika 9\n",
+      "slika 10\n",
+      "slika 11\n",
+      "slika 12\n",
+      "slika 13\n",
+      "slika 14\n",
+      "slika 15\n",
+      "slika 16\n",
+      "slika 17\n",
+      "slika 18\n",
+      "slika 19\n",
+      "slika 20\n",
+      "slika 21\n",
+      "slika 22\n",
+      "slika 23\n",
+      "slika 24\n",
+      "slika 25\n",
+      "slika 26\n",
+      "slika 27\n",
+      "slika 28\n",
+      "slika 29\n",
+      "slika 30\n",
+      "slika 31\n",
+      "slika 32\n",
+      "slika 33\n",
+      "slika 34\n",
+      "slika 35\n",
+      "slika 36\n",
+      "slika 37\n",
+      "slika 38\n",
+      "slika 39\n",
+      "slika 40\n",
+      "slika 41\n",
+      "slika 42\n",
+      "slika 43\n",
+      "slika 44\n",
+      "slika 45\n",
+      "slika 46\n",
+      "slika 47\n",
+      "slika 48\n",
+      "slika 49\n",
+      "slika 50\n",
+      "slika 51\n",
+      "slika 52\n",
+      "slika 53\n",
+      "slika 54\n",
+      "slika 55\n",
+      "slika 56\n",
+      "slika 57\n",
+      "slika 58\n",
+      "slika 59\n",
+      "slika 60\n",
+      "slika 61\n",
+      "slika 62\n",
+      "slika 63\n",
+      "slika 64\n",
+      "slika 65\n",
+      "slika 66\n",
+      "slika 67\n",
+      "slika 68\n",
+      "slika 69\n",
+      "slika 70\n",
+      "slika 71\n",
+      "slika 72\n",
+      "slika 73\n",
+      "slika 74\n",
+      "slika 75\n",
+      "slika 76\n",
+      "slika 77\n",
+      "slika 78\n",
+      "slika 79\n",
+      "slika 80\n",
+      "slika 81\n",
+      "slika 82\n",
+      "slika 83\n",
+      "slika 84\n",
+      "slika 85\n",
+      "slika 86\n",
+      "slika 87\n",
+      "slika 88\n",
+      "slika 89\n",
+      "slika 90\n",
+      "slika 91\n",
+      "slika 92\n",
+      "slika 93\n",
+      "slika 94\n",
+      "slika 95\n",
+      "slika 96\n",
+      "slika 97\n",
+      "slika 98\n",
+      "slika 99\n",
+      "slika 100\n",
+      "slika 101\n",
+      "slika 102\n",
+      "slika 103\n",
+      "slika 104\n",
+      "slika 105\n",
+      "slika 106\n",
+      "slika 107\n",
+      "slika 108\n",
+      "slika 109\n",
+      "slika 110\n",
+      "slika 111\n",
+      "slika 112\n",
+      "slika 113\n",
+      "slika 114\n",
+      "slika 115\n",
+      "slika 116\n",
+      "slika 117\n",
+      "slika 118\n",
+      "slika 119\n",
+      "slika 120\n",
+      "slika 121\n",
+      "slika 122\n",
+      "slika 123\n",
+      "slika 124\n",
+      "slika 125\n",
+      "slika 126\n",
+      "slika 127\n",
+      "slika 128\n",
+      "slika 129\n",
+      "slika 130\n",
+      "slika 131\n",
+      "slika 132\n",
+      "slika 133\n",
+      "slika 134\n",
+      "slika 135\n",
+      "slika 136\n",
+      "slika 137\n",
+      "slika 138\n",
+      "slika 139\n",
+      "slika 140\n",
+      "slika 141\n",
+      "slika 142\n",
+      "slika 143\n",
+      "slika 144\n",
+      "slika 145\n",
+      "slika 146\n",
+      "slika 147\n",
+      "slika 148\n",
+      "slika 149\n",
+      "slika 150\n",
+      "[1, 2, 0, 1, 1, 1, 1, 3, 0, 0, 2, 2, 2, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 2, 2, 0, 1, 1, 2, 0, 2, 0, 1, 1, 1, 0, 2, 1, 0, 1, 2, 2, 1, 1, 1, 1, 0, 1, 2, 1, 4, 3, 0, 0, 1, 2, 1, 0, 0, 1, 1, 1, 1, 2, 0, 3, 1, 1, 2, 1, 2, 2, 1, 1, 0, 1, 2, 2, 1, 1, 2, 1, 2, 1, 1, 3, 1, 1, 1, 2, 0, 1, 3, 0, 0, 2, 1, 3, 1, 2, 0, 0, 1, 3, 1, 1, 1, 4, 2, 2, 1, 1, 2, 2, 2, 2, 2, 0, 1, 1, 0, 1, 2, 0, 0, 0, 0, 1, 0, 3, 0, 2, 2, 1, 3, 0, 1, 2, 1, 3, 2, 1, 0, 1, 1, 0, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "slike = load_images_from_folder(\"skup_podataka/test\")\n",
+    "\n",
+    "br_slike = 0\n",
+    "lista = []\n",
+    "print(\"br slika:\", len(slike))\n",
+    "\n",
+    "clf = joblib.load(\"pedestrian.pkl\")\n",
+    "scaleFactor = 1.2\n",
+    "inverse = 1.0/scaleFactor\n",
+    "winStride = (8, 8)\n",
+    "winSize = (128, 64)\n",
+    "for img in slike:\n",
+    "    print(\"slika\", br_slike + 1)\n",
+    "    gray = img.copy()\n",
+    "\n",
+    "    rects = []\n",
+    "    h, w = gray.shape\n",
+    "    count = 0\n",
+    "    while (h >= 128 and w >= 64):\n",
+    "        h, w= gray.shape\n",
+    "        horiz = w - 64\n",
+    "        vert = h - 128\n",
+    "        i = 0\n",
+    "        j = 0\n",
+    "        while i < vert:\n",
+    "            j = 0\n",
+    "            while j < horiz:\n",
+    "                portion = gray[i:i+winSize[0], j:j+winSize[1]]\n",
+    "                features = hog(portion, orientations=9, pixels_per_cell=(8, 8), cells_per_block=(2, 2), block_norm=\"L2\")\n",
+    "                result = clf.predict([features])\n",
+    "                visual = gray.copy()\n",
+    "                cv2.rectangle(visual, (j, i), (j+winSize[1], i+winSize[0]), (0, 0, 255), 2)\n",
+    "                if int(result[0]) == 1:\n",
+    "                    confidence = clf.decision_function([features])\n",
+    "                    appendRects(i, j, confidence, count, rects)\n",
+    "                j = j + winStride[0]\n",
+    "            i = i + winStride[1]\n",
+    "        gray = cv2.resize(gray, (int(w*inverse), int(h*inverse)), interpolation=cv2.INTER_AREA)\n",
+    "        count = count + 1\n",
+    "    nms_rects = nms(rects, 0.2)\n",
+    "    br = 0\n",
+    "    br_slike += 1\n",
+    "    for (a, b, conf, c, d) in nms_rects:\n",
+    "        if ((c-a > 50 and d-b > 100) or (c-a > 100 and d-b > 50)):\n",
+    "            br += 1\n",
+    "    lista.append(br)\n",
+    "\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ac96e03c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150 150\n",
+      "Tacnost: 46.0 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "resenje = []\n",
+    "with open('skup_podataka/test_podaci.csv', encoding=\"utf8\", newline='\\n') as f:\n",
+    "    lines = csv.reader(f, delimiter=',')\n",
+    "    for row in lines:\n",
+    "        if (row[0] == \"br_knjiga\"):\n",
+    "            continue\n",
+    "        resenje.append(row[0] != 0)\n",
+    "        \n",
+    "print(len(lista), len(resenje))\n",
+    "br_tacnih = 0\n",
+    "for ind in range(br_slike):\n",
+    "    if (resenje[ind] == lista[ind]):\n",
+    "        br_tacnih += 1\n",
+    "\n",
+    "print(\"Tacnost:\", (br_tacnih / br_slike) * 100, \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "08d97b6d",
    "metadata": {},
@@ -87,36 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1600, 1600)\n",
-      "1536 1472\n",
-      "(1333, 1333)\n",
-      "1269 1205\n",
-      "(1110, 1110)\n",
-      "1046 982\n",
-      "(925, 925)\n",
-      "861 797\n",
-      "(770, 770)\n",
-      "706 642\n",
-      "(641, 641)\n",
-      "577 513\n",
-      "(534, 534)\n",
-      "470 406\n",
-      "(445, 445)\n",
-      "381 317\n",
-      "(370, 370)\n",
-      "306 242\n",
-      "(308, 308)\n",
-      "244 180\n",
-      "(256, 256)\n",
-      "192 128\n",
-      "(213, 213)\n",
-      "149 85\n",
-      "(177, 177)\n",
-      "113 49\n",
-      "(147, 147)\n",
-      "83 19\n",
-      "(122, 122)\n",
-      "58 -6\n",
+      "pocetak\n",
       "kraaaj\n",
       "broj kontura 2\n"
      ]
@@ -144,15 +399,14 @@
     "winStride = (8, 8)\n",
     "winSize = (128, 64)\n",
     "\n",
+    "print (\"pocetak\")\n",
     "rects = []\n",
     "h, w = gray.shape\n",
     "count = 0\n",
     "while (h >= 128 and w >= 64):\n",
-    "    print (gray.shape)\n",
     "    h, w= gray.shape\n",
     "    horiz = w - 64\n",
     "    vert = h - 128\n",
-    "    print (horiz, vert)\n",
     "    i = 0\n",
     "    j = 0\n",
     "    while i < vert:\n",
@@ -163,24 +417,18 @@
     "            result = clf.predict([features])\n",
     "            visual = gray.copy()\n",
     "            cv2.rectangle(visual, (j, i), (j+winSize[1], i+winSize[0]), (0, 0, 255), 2)\n",
-    "            #cv2.imshow(\"visual\", visual)\n",
-    "            #cv2.waitKey(1)\n",
     "            if int(result[0]) == 1:\n",
-    "                #print (result, i, j)\n",
     "                confidence = clf.decision_function([features])\n",
     "                appendRects(i, j, confidence, count, rects)\n",
     "            j = j + winStride[0]\n",
     "        i = i + winStride[1]\n",
     "    gray = cv2.resize(gray, (int(w*inverse), int(h*inverse)), interpolation=cv2.INTER_AREA)\n",
     "    count = count + 1\n",
-    "    #print (count)\n",
     "print (\"kraaaj\")\n",
     "            \n",
     "nms_rects = nms(rects, 0.2)\n",
     "for (a, b, conf, c, d) in rects:\n",
     "    cv2.rectangle(orig, (a, b), (a+c, b+d), (0, 255, 0), 2)\n",
-    "#cv2.imshow(\"Before NMS\", orig)\n",
-    "#cv2.waitKey(0)\n",
     "plt.imshow(orig, 'gray')\n",
     "br = 0\n",
     "for (a, b, conf, c, d) in nms_rects:\n",
@@ -194,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0cb481c",
+   "id": "b315e793",
    "metadata": {},
    "outputs": [],
    "source": []
