Izbacivanje naziva kolona u csv fajlu

--- a/4_non_maximum_suppression.ipynb
+++ b/4_non_maximum_suppression.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "ac96e03c",
    "metadata": {},
    "outputs": [
@@ -329,8 +329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150 150\n",
-      "Tacnost: 46.0 %\n"
+      "['0', '0', '3', '0', '3', '3', '0', '0', '2', '0', '1', '1', '0', '0', '1', '0', '2', '3', '0', '2', '1', '1', '0', '1', '0', '0', '2', '0', '0', '0', '1', '0', '2', '1', '2', '1', '0', '1', '1', '5', '3', '2', '2', '0', '2', '3', '3', '2', '0', '1', '3', '0', '0', '1', '2', '1', '1', '1', '0', '3', '0', '2', '0', '1', '1', '0', '1', '3', '2', '0', '1', '0', '0', '1', '2', '2', '3', '4', '0', '3', '1', '2', '2', '1', '1', '1', '1', '1', '0', '2', '0', '2', '1', '1', '0', '1', '1', '0', '0', '2', '2', '0', '0', '1', '0', '0', '3', '3', '7', '1', '0', '1', '1', '1', '2', '0', '1', '1', '1', '1', '3', '2', '0', '4', '0', '1', '1', '0', '2', '1', '2', '1', '0', '3', '3', '1', '0', '0', '3', '1', '1', '0', '1', '1', '3', '0', '2', '2', '1', '0']\n",
+      "Tacnost: 0.0 %\n"
      ]
     }
    ],
@@ -341,9 +341,9 @@
     "    for row in lines:\n",
     "        if (row[0] == \"br_knjiga\"):\n",
     "            continue\n",
-    "        resenje.append(row[0] != 0)\n",
+    "        resenje.append(int(row[0])\n",
     "        \n",
-    "print(len(lista), len(resenje))\n",
+    "print(resenje)\n",
     "br_tacnih = 0\n",
     "for ind in range(br_slike):\n",
     "    if (resenje[ind] == lista[ind]):\n",
