--- a/5_joblib.ipynb
+++ b/5_joblib.ipynb
@@ -148,6 +148,8 @@
     "with open('skup_podataka/test_podaci.csv', encoding=\"utf8\", newline='\\n') as f:\n",
     "    lines = csv.reader(f, delimiter=',')\n",
     "    for row in lines:\n",
+    "        if (row[0] == \"br_knjiga\"):\n",
+    "            continue\n",
     "        resenje.append(row[0] != 0)\n",
     "\n",
     "br = 0\n",
@@ -168,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d32ac79",
+   "id": "0909aaa7",
    "metadata": {},
    "outputs": [],
    "source": []
