--- a/4_non_maximum_suppression.ipynb
+++ b/4_non_maximum_suppression.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ac96e03c",
    "metadata": {},
    "outputs": [
@@ -329,8 +329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', '0', '3', '0', '3', '3', '0', '0', '2', '0', '1', '1', '0', '0', '1', '0', '2', '3', '0', '2', '1', '1', '0', '1', '0', '0', '2', '0', '0', '0', '1', '0', '2', '1', '2', '1', '0', '1', '1', '5', '3', '2', '2', '0', '2', '3', '3', '2', '0', '1', '3', '0', '0', '1', '2', '1', '1', '1', '0', '3', '0', '2', '0', '1', '1', '0', '1', '3', '2', '0', '1', '0', '0', '1', '2', '2', '3', '4', '0', '3', '1', '2', '2', '1', '1', '1', '1', '1', '0', '2', '0', '2', '1', '1', '0', '1', '1', '0', '0', '2', '2', '0', '0', '1', '0', '0', '3', '3', '7', '1', '0', '1', '1', '1', '2', '0', '1', '1', '1', '1', '3', '2', '0', '4', '0', '1', '1', '0', '2', '1', '2', '1', '0', '3', '3', '1', '0', '0', '3', '1', '1', '0', '1', '1', '3', '0', '2', '2', '1', '0']\n",
-      "Tacnost: 0.0 %\n"
+      "[0, 0, 3, 0, 3, 3, 0, 0, 2, 0, 1, 1, 0, 0, 1, 0, 2, 3, 0, 2, 1, 1, 0, 1, 0, 0, 2, 0, 0, 0, 1, 0, 2, 1, 2, 1, 0, 1, 1, 5, 3, 2, 2, 0, 2, 3, 3, 2, 0, 1, 3, 0, 0, 1, 2, 1, 1, 1, 0, 3, 0, 2, 0, 1, 1, 0, 1, 3, 2, 0, 1, 0, 0, 1, 2, 2, 3, 4, 0, 3, 1, 2, 2, 1, 1, 1, 1, 1, 0, 2, 0, 2, 1, 1, 0, 1, 1, 0, 0, 2, 2, 0, 0, 1, 0, 0, 3, 3, 7, 1, 0, 1, 1, 1, 2, 0, 1, 1, 1, 1, 3, 2, 0, 4, 0, 1, 1, 0, 2, 1, 2, 1, 0, 3, 3, 1, 0, 0, 3, 1, 1, 0, 1, 1, 3, 0, 2, 2, 1, 0]\n",
+      "Tacnost: 25.333333333333336 %\n"
      ]
     }
    ],
@@ -341,7 +341,7 @@
     "    for row in lines:\n",
     "        if (row[0] == \"br_knjiga\"):\n",
     "            continue\n",
-    "        resenje.append(int(row[0])\n",
+    "        resenje.append(int(row[0]))\n",
     "        \n",
     "print(resenje)\n",
     "br_tacnih = 0\n",
