Izmena greske rada sa stringom umesto sa int vrednoscu pri citanju iz fajla

--- a/5_joblib.ipynb
+++ b/5_joblib.ipynb
@@ -61,8 +61,7 @@
       "-- 200   [0.17440152 0.         0.         ... 0.         0.         0.        ]\n",
       "-- 209   [0.42871029 0.         0.01732251 ... 0.27041089 0.23306476 0.26117683]\n",
       "-- 210   [0.30927826 0.08554968 0.07624716 ... 0.06607455 0.14553686 0.12925364]\n",
-      "- kraaj knjiga\n",
-      "LinearSVC(C=0.01, class_weight='balanced', verbose=1)\n"
+      "- kraaj knjiga\n"
      ]
     },
     {
@@ -78,6 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "LinearSVC(C=0.01, class_weight='balanced', verbose=1)\n",
       "[LibLinear]"
      ]
     },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ae2dc53e",
    "metadata": {},
    "outputs": [
@@ -137,8 +137,8 @@
      "output_type": "stream",
      "text": [
       "Ukupno testiranih: 150\n",
-      "Broj tacnih: 103\n",
-      "Procentualno: 68.66666666666667 %\n"
+      "Broj tacnih: 89\n",
+      "Procentualno: 59.333333333333336 %\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
     "    for row in lines:\n",
     "        if (row[0] == \"br_knjiga\"):\n",
     "            continue\n",
-    "        resenje.append(row[0] != 0)\n",
+    "        resenje.append(int(row[0]) != 0)\n",
     "\n",
     "br = 0\n",
     "br_tacnih = 0\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0909aaa7",
+   "id": "fb4a67cb",
    "metadata": {},
    "outputs": [],
    "source": []
