Isprobana metoda ocr

--- a/detekcija_reci_milica.ipynb
+++ b/detekcija_reci_milica.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ddf1059e",
    "metadata": {
     "scrolled": true
@@ -133,9 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LibLinear]\n",
-      "Detekcija je zavrsena\n",
-      "Tacnost resenja: 88.67%\n"
+      "[LibLinear]"
      ]
     }
    ],
@@ -153,8 +151,171 @@
     "file_info = read_resault('skup_podataka/test_podaci.csv')\n",
     "accuracy, resault = predict_books(linear_svc, test_set, file_info)\n",
     "print(\"\\nDetekcija je zavrsena\")\n",
-    "print(\"Tacnost resenja: \" + str(accuracy) +\"%\")\n",
+    "print(\"Tacnost resenja: \" + str(accuracy) +\"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ed5860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# detekcija slova\n",
+    "def resize_region(region):\n",
+    "    return cv2.resize(region, (28, 28), interpolation=cv2.INTER_NEAREST)\n",
     "\n",
+    "def select_roi(image_orig, image_bin):                                 # roi - region od interesa\n",
+    "    contours, hierarchy = cv2.findContours(image_bin.copy(), cv2.RETR_LIST, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    sorted_regions = []                                                # lista sortiranih regiona po X osi\n",
+    "    regions_array = []\n",
+    "    for contour in contours:\n",
+    "        x, y, w, h = cv2.boundingRect(contour)                         # koordinate i velicina granicnog pravougaonika\n",
+    "        area = cv2.contourArea(contour)\n",
+    "        if area > 100 and h < 100 and h > 40 and w > 5:\n",
+    "            # kopirati [y:y+h+1, x:x+w+1] sa binarne slike i smestiti u novu sliku\n",
+    "            # oznaciti region pravougaonikom na originalnoj slici sa rectangle funkcijom\n",
+    "            region = image_bin[y:y+h+1, x:x+w+1]\n",
+    "            regions_array.append([resize_region(region), (x, y, w, h)])\n",
+    "            cv2.rectangle(image_orig, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
+    "    \n",
+    "    regions_array = sorted(regions_array, key=lambda x: x[1][0])\n",
+    "    sorted_regions = [region[0] for region in regions_array]\n",
+    "    return image_orig, sorted_regions\n",
+    "\n",
+    "def scale_to_range(image):\n",
+    "    return image/255\n",
+    "\n",
+    "def matrix_to_vector(image):\n",
+    "    return image.flatten()\n",
+    "\n",
+    "def prepare_for_ann(regions):\n",
+    "    ready_for_ann = []\n",
+    "    for region in regions:\n",
+    "        scale = scale_to_range(region)\n",
+    "        ready_for_ann.append(matrix_to_vector(scale))\n",
+    "    return ready_for_ann\n",
+    "\n",
+    "def convert_output(alphabet):\n",
+    "    nn_outputs = []\n",
+    "    for index in range(len(alphabet)):\n",
+    "        output = np.zeros(len(alphabet))\n",
+    "        output[index] = 1\n",
+    "        nn_outputs.append(output)\n",
+    "    return np.array(nn_outputs)\n",
+    "\n",
+    "def create_ann(output_size):\n",
+    "    ann = Sequential()\n",
+    "    ann.add(Dense(128, input_dim=784, activation='sigmoid'))\n",
+    "    ann.add(Dense(output_size, activation='sigmoid'))\n",
+    "    return ann\n",
+    "\n",
+    "def train_ann(ann, X_train, y_train, epochs):\n",
+    "    X_train = np.array(X_train, np.float32) # dati ulaz\n",
+    "    y_train = np.array(y_train, np.float32) # zeljeni izlazi na date ulaze\n",
+    "    \n",
+    "    print(\"\\nTraining started...\")\n",
+    "    sgd = SGD(learning_rate=0.01, momentum=0.9)\n",
+    "    ann.compile(loss='mean_squared_error', optimizer=sgd)\n",
+    "    ann.fit(X_train, y_train, epochs=epochs, batch_size=1, verbose=0, shuffle=False)\n",
+    "    print(\"\\nTraining completed...\")\n",
+    "    return ann\n",
+    "\n",
+    "def winner(output):\n",
+    "    return max(enumerate(output), key=lambda x: x[1])[0]\n",
+    "\n",
+    "def display_result(outputs, alphabet):\n",
+    "    result = []\n",
+    "    for output in outputs:\n",
+    "        result.append(alphabet[winner(output)])\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9674643",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Activation\n",
+    "\n",
+    "from tensorflow.keras.optimizers import SGD\n",
+    "\n",
+    "def binarizuj_sliku(siva_slika):\n",
+    "    visina, sirina = siva_slika.shape[0:2]\n",
+    "    bin_slika = np.ndarray((visina, sirina), dtype=np.uint8)                           # mozda visak\n",
+    "    ret, binarna_slika = cv2.threshold(siva_slika, 127, 255, cv2.THRESH_BINARY)\n",
+    "    return binarna_slika\n",
+    "def prikaz_slike(slika, color=False):\n",
+    "    if color:\n",
+    "        plt.imshow(slika)\n",
+    "    else:\n",
+    "        plt.imshow(slika, 'gray')\n",
+    "\n",
+    "alfabet_slika = cv2.cvtColor(cv2.imread('bezKvacica.png'), cv2.COLOR_BGR2RGB)\n",
+    "slika = binarizuj_sliku(cv2.cvtColor(alfabet_slika, cv2.COLOR_RGB2GRAY))\n",
+    "selektovani_regioni, simboli = select_roi(alfabet_slika.copy(), slika)\n",
+    "print(\"Broj prepoznatih regiona: \", len(simboli))\n",
+    "plt.rcParams['figure.figsize'] = [100, 50]\n",
+    "prikaz_slike(selektovani_regioni)\n",
+    "#prikaz_slike(selektovani_regioni)\n",
+    "\n",
+    "alfabet = ['A','B','V','G','D','E','Z','I','J','K','L','M','N','O','P','R','S','T','U','F','H','C']\n",
+    "print(len(alfabet))\n",
+    "ulazi = prepare_for_ann(simboli)\n",
+    "izlazi = convert_output(alfabet)\n",
+    "nm = create_ann(22)                          # br slova\n",
+    "nm = train_ann(nm, ulazi, izlazi, epochs=2000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7c353b3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# slika_u_boji = ucitaj_sliku('images/slozen_izraz.png')\n",
+    "slika = binarizuj_sliku(test_set[113])\n",
+    "selektovani_regioni, simboli = select_roi(test_set[113].copy(), slika)\n",
+    "print(\"Broj prepoznatih regiona: \", len(simboli))\n",
+    "prikaz_slike(selektovani_regioni)\n",
+    "\n",
+    "ulazi = prepare_for_ann(simboli)\n",
+    "rezultati = nm.predict(np.array(ulazi, np.float32))\n",
+    "izraz = \"\"\n",
+    "for i in range(len(simboli)):\n",
+    "    maxi = max(rezultati[i])\n",
+    "    for ind in range(len(rezultati[i])):\n",
+    "        if rezultati[i][ind] == maxi:\n",
+    "            izraz += alfabet[ind] + \" \"\n",
+    "            break\n",
+    "print(\"Izraz je izracunat: \" + izraz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36ef51c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4bdaa1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"\n",
     "    file_info                                                -> [[0, []], [2, ['rec', 'rec', 'rec']], ...]\n",
     "    \n",
@@ -170,14 +331,6 @@
     "    \n",
     "\"\"\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96ed5860",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
